Fix bug with too big pizza picture after loading page

--- a/src/sass/partials/_media.scss
+++ b/src/sass/partials/_media.scss
@@ -37,7 +37,7 @@
       width: 250px;
       height: 250px;
 
-      img[class^="sauce-"] {
+      img[class*="sauce-"] {
         height: 90%;
       }
 
